package eu.maxkim.boredombuster

object Tags {

    const val ActivityLink = "tag_activity_link"

    const val ActivityTab = "tag_activity_tab"
    const val FavoritesTab = "tag_favorites_tab"
}